Fri Nov 05 13:14:23 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: Add documentation comment
	  advising that apply_cached_items() should probably be called
	  here.

Thu Sep 09 15:25:08 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Add set_queryid() method, to allow
	  stored query ids to be set explicitly.

Thu Jun 03 18:20:47 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Updated tarballs
	  and branchpoints.  New xapian packages include a bug fix for the
	  matcher which was occasionally causing documents to be missed
	  from the result set.

Sun May 09 09:45:53 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: New packages, patched to avoid a segfault
	  with ValueGePostList.

Fri May 07 02:44:00 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Updated packages - should give considerably
	  better performance for range queries.

Thu May 06 13:17:09 GMT 2010  Richard Boulton <richard@tartarus.org>

	* external_posting_source/sortdatabase/Makefile: Fix to work with
	  latest xapian packages, by dropping the -1.1 suffix to
	  xapian-config.  Thanks to Shane Evans for pointing it out.

Wed May 05 09:26:11 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/build_xapian.sh: Use xapian-config not xapian-config-1.1,
	  now we're using packages based on 1.2.x

Tue May 04 21:54:06 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: Use new xapian archives - in particular,
	  these fix a replication bug.

Tue Mar 30 17:16:10 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Test that replacing a
	  document when using store_only=True drops the document from
	  cached queries.

Tue Mar 30 17:08:58 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: If a document is replaced with