@@ -1,3 +1,9 @@
+Mon Dec 20 14:24:39 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/searchresults.py,xappy/unittests/collapse.py: Add access to
+	  the collapse_key and collapse_count properties of search results.
+	  Add test of these.
+
 Fri Nov 05 13:14:23 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* xappy/indexerconnection.py: Add documentation comment
